my final output

--- a/index.html
+++ b/index.html
@@ -72,17 +72,21 @@
           </p>
           <div>
             <a href="contact.html"><button id="button77" type="button"><span id="span11"></span>Hire Me</button></a>
-            <a href="https://drive.google.com/file/d/1tLeKYxIxe-5PG0C7D5t6CJdedz9PRqjf/view?usp=share_link" target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
+            <a href="https://drive.google.com/file/d/1tLeKYxIxe-5PG0C7D5t6CJdedz9PRqjf/view?usp=share_link"
+              target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
           </div>
         </div>
         <div id="mySidenav" class="sidenav">
           <a href="https://www.facebook.com/jaiyanz22" id="facebook"><i
               class="fa-brands fa-facebook"></i>facebook</i></a>
+
           <a href="https://www.linkedin.com/in/jaime-yanoc-4b715116b/" id="linkedin"><i
               class="fa-brands fa-linkedin"></i>LinkedIn</i></a>
+
           <a href="https://discord.com/channels/@me" id="discord"><i class="fa-brands fa-discord"></i>Discord</i></a>
           <a href="https://www.youtube.com/channel/UCXyWGVK9w16Xc9elwipflBw" id="youtube"><i
               class="fa-brands fa-youtube"></i>Youtube</i></a>
+
         </div>
       </div>
     </div>
@@ -113,7 +117,8 @@
             for a
             developer to add to your team, I'd love to hear from you!</p><br>
 
-            <a href="https://drive.google.com/file/d/1tLeKYxIxe-5PG0C7D5t6CJdedz9PRqjf/view?usp=share_link" target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
+          <a href="https://drive.google.com/file/d/1tLeKYxIxe-5PG0C7D5t6CJdedz9PRqjf/view?usp=share_link"
+            target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
 
         </div>
       </div>
@@ -123,69 +128,194 @@
 
     <!--about end-->
 
+    <!-- mission -->
+    <div class="b-example-divider" id="about"></div>
+
+    <div class="container-fluid my-5" style="background-color: lightgray;">
+      <H1 style="text-align: center; font-size: 3rem; font-weight: bolder;">MISSION + VISSION</H1>
+      <div class=" row pb-3">
+
+        <div class="col-lg-4 col-md-6 text-dark">
+          <div class="card custom-service-card">
+            <div class="card-body shadow-lg">
+
+              <div>
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                      <img src="./images/Capture2.PNG" alt="Avatar" style="width:100%;height: 345px;">
+                    </div>
+                    <div class="flip-card-back">
+                      <div class="d-flex align-items-center justify-content-center my-3">
+                        <i class="fa-solid fa-business-time fa-3x"></i>
+                      </div>
+                      <h4 class="fw-bold mx-2" style="color: #000000;">Business</h4>
+                      <div class="d-flex justify-content-center align-items-center flex-column">
+                        <p style="text-align: center; padding: 15px;"> Understand your needs, <span
+                            style="font-size: 1rem; font-weight: bolder; color: #000000;">IDENTIFY-INTEGRATE-SUPPORT
+                          </span>High quality affortable IT Solutions in Website Services, Mobility, Analytics
+                          and Cloud with Speed, Flexibility with the Professional Services</p>
+                        <a class="btn btn-green w-30"
+                          style="background-color: rgb(10, 25, 47); color:  rgb(202, 212, 244); border-radius: 15px;"
+                          href="#">Read More</a>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 text-dark">
+          <div class="card custom-service-card">
+            <div class="card-body shadow-lg">
+              <div>
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                      <img src="./images/Capture7.PNG" alt="Avatar" style="width:100%;height: 345px;">
+                    </div>
+                    <div class="flip-card-back">
+                      <div class="d-flex align-items-center justify-content-center my-3">
+                        <i class="fa-solid fa-person-circle-exclamation fa-3x"></i>
+                      </div>
+                      <h4 class="fw-bold mx-2" style="color: #000000;">My Mission</h4>
+                      <div class="d-flex justify-content-center align-items-center flex-column">
+                        <p style="text-align: center; padding: 15px;"> My mission is to ensure the best relationship
+                          with my clients, both during and after their goals have been met. I keep this in mind
+                          whether designing print media, creating custom maps, producing multimedia or building
+                          websites.</p>
+                        <a class="btn btn-green w-30"
+                        style="background-color: rgb(10, 25, 47); color:  rgb(202, 212, 244); border-radius: 15px;"
+                        href="#">Read More</a>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 text-dark">
+          <div class="card custom-service-card">
+            <div class="card-body shadow-lg">
+              <div>
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                      <img src="./images/Capture9.PNG" alt="Avatar" style="width:100%;height: 345px;">
+                    </div>
+                    <div class="flip-card-back">
+                      <div class="d-flex align-items-center justify-content-center my-3">
+                        <i class="fa-solid fa-eye-low-vision fa-3x"></i>
+                      </div>
+                      <h4 class="fw-bold mx-2" style="color: #000000;">My Vision</h4>
+                      <div class="d-flex justify-content-center align-items-center flex-column">
+                        <p style="text-align: center; padding: 15px;"> I believe every day is an opportunity to further
+                          perfect our strategy and spur you on to achieve your organizational goals. <span
+                          style="font-size: 1rem; font-weight: bolder; color: #000000;">Our vision is to
+                          make you succeed in yours.</span></p>
+                          <a class="btn btn-green w-30"
+                          style="background-color: rgb(10, 25, 47); color:  rgb(202, 212, 244); border-radius: 15px;"
+                          href="#">Read More</a>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="b-example-divider"></div>
+    <!-- mission end -->
+
+
     <!--cards-->
     <div class="container-fluid px-4 py-5" id="custom-cards">
       <h2 class="pb-2 border-bottom" id="pp">PORTFOLIO</h2>
       <!--cards end-->
 
       <!--Carosel-->
-      <div class="container-fluid">
-        <div id="myCarousel" class="carousel slide shadow-lg" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
-              aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </section>
+
+      <section id="clients" class="bg-light">
+        <div class="container-fluid w-100 p-5">
+          <h2 class="title text-center" style="font-weight: bolder; color: rgb(10, 25, 47); font-size: 3rem; ">My Clients</h2>
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <img src="images/client1.jpg" class="d-block w-100" alt="Client 1">
+                  </div>
+
+                  <div class="col-sm-4">
+                    <img src="images/client2.jpg" class="d-block w-100" alt="Client 2">
+                  </div>
+                  <div class="col-sm-4">
+                    <img src="images/client5.jpg" class="d-block w-100" alt="Client 3">
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <img src="images/client4.jpg" class="d-block w-100" alt="Client 4">
+                  </div>
+
+                  <div class="col-sm-4">
+                    <img src="images/client3.jpg" class="d-block w-100" alt="Client 5">
+                  </div>
+                  <div class="col-sm-4">
+                    <img src="images/client6.jpg" class="d-block w-100" alt="Client 6">
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <img src="images/client7.png" class="d-block w-100 shadow-lg" alt="Client 7">
+                  </div>
+
+                  <div class="col-sm-4">
+                    <img src="images/client8.jpg" class="d-block w-100 shadow-lg" alt="Client 8">
+                  </div>
+                  <div class="col-sm-4">
+                    <img src="images/client9.jpg" class="d-block w-100 shadow-lg" alt="Client 9">
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev">
+              <span class="carousel-control"><i class="fas fa-chevron-left"></i></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next">
+              <span class="carousel-control"><i class="fas fa-chevron-right"></i></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./images/slide-2.png" width="100%" height="100%" aria-hidden="true"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-              <rect width="100%" height="100%" fill="#777" />
-              </svg>
-
-              <div class="container">
-                <div class="carousel-caption text-start">
-
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./images/slide-1.png" width="100%" height="100%" aria-hidden="true"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-              <rect width="100%" height="100%" fill="#777" />
-              </svg>
-
-              <div class="container">
-                <div class="carousel-caption">
-
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./images/slide-3.png" width="100%" height="100%" aria-hidden="true"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-              <rect width="100%" height="100%" fill="#777" />
-              </svg>
-
-              <div class="container">
-                <div class="carousel-caption text-end">
-
-                </div>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
-      </div>
-
+      </section>
       <!--carosel end-->
 
 
@@ -331,12 +461,18 @@
         <!-- footer -->
 
         <div class="container-fluid border-top">
-          <a href="contact.html" style="color: rgb(95,241,208); text-decoration: none; font-weight: bolder;"><center class="pt-2">CONTACT ME DIRECTLY CLICK HERE</center></a>
-            <div class="row row-cols-1 row-cols-md-3 text-center pt-2">
-              <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">WhatsApp</code> <br> +63 960 899 8117</div>
-              <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">Skype</code> <br> live:.cid.dd9dc27cf0409808</div>
-              <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">Email</code> <br> <a href="mailto:asdf@gmail.com"  style="color: rgb(95,241,208); text-decoration: none;">jaiyanz22@gmail.com</a></div>
-            </div>
+          <a href="contact.html" style="color: rgb(95,241,208); text-decoration: none; font-weight: bolder;">
+            <center class="pt-2">CONTACT ME DIRECTLY CLICK HERE</center>
+          </a>
+          <div class="row row-cols-1 row-cols-md-3 text-center pt-2">
+            <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code
+                style="color: rgb(202,212,244);">WhatsApp</code> <br> +63 960 899 8117</div>
+            <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code
+                style="color: rgb(202,212,244);">Skype</code> <br> live:.cid.dd9dc27cf0409808</div>
+            <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code
+                style="color: rgb(202,212,244);">Email</code> <br> <a href="mailto:asdf@gmail.com"
+                style="color: rgb(95,241,208); text-decoration: none;">jaiyanz22@gmail.com</a></div>
+          </div>
 
           <footer class="d-flex flex-wrap justify-content-between align-items-center">
             <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
