--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <img src="images/client2.jpg" class="d-block w-100" alt="Client 2">
                   </div>
                   <div class="col-sm-4">
-                    <img src="images/client5.jpg" class="d-block w-100" alt="Client 3">
+                    <img src="images/client5.JPG" class="d-block w-100" alt="Client 3">
                   </div>
                 </div>
               </div>
