--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                   </div>
 
                   <div class="col-sm-4">
-                    <img src="images/client2.jpg" class="d-block w-100" alt="Client 2">
+                    <img src="images/client2.JPG" class="d-block w-100" alt="Client 2">
                   </div>
                   <div class="col-sm-4">
                     <img src="images/client5.JPG" class="d-block w-100" alt="Client 3">
