--- a/index.html
+++ b/index.html
@@ -268,7 +268,54 @@
                     <img src="images/client2.JPG" class="d-block w-100" alt="Client 2">
                   </div>
                   <div class="col-sm-4">
-                    <img src="images/client5.JPG" class="d-block w-100" alt="Client 3">
+                    <img src="images/client5.jpg" class="d-block w-100" alt="Client 3">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <img src="images/client4.jpg" class="d-block w-100" alt="Client 4">
+                            </div>
+
+                            <div class="col-sm-4">
+                                <img src="images/client3.jpg" class="d-block w-100" alt="Client 5">
+                            </div>
+                            <div class="col-sm-4">
+                                <img src="images/client6.jpg" class="d-block w-100" alt="Client 6">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <img src="images/client7.png" class="d-block w-100 shadow-lg" alt="Client 7">
+                            </div>
+
+                            <div class="col-sm-4">
+                                <img src="images/client8.jpg" class="d-block w-100 shadow-lg" alt="Client 8">
+                            </div>
+                            <div class="col-sm-4">
+                                <img src="images/client9.jpg" class="d-block w-100 shadow-lg" alt="Client 9">
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control"><i class="fas fa-chevron-left"></i></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control"><i class="fas fa-chevron-right"></i></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
                   </div>
                 </div>
               </div>
