update font, color, spacing

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
           <section id="clients" class="bg-light">
               <div class="container w-100 p-5">
-                  <h2 class="title text-center">Our Clients</h2>
+                  <h2 class="title text-center" style="font-size: 3rem; text-transform: uppercase; font-weight: bolder; color: rgb(10, 25, 47);">Previous Clients</h2>
                   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
