Rename image filename

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                   </div>
   
                                   <div class="col-sm-4">
-                                      <img src="images/client2.jpg" class="d-block w-100" alt="Client 2">
+                                      <img src="images/client2.JPG" class="d-block w-100" alt="Client 2">
                                   </div>
                                   <div class="col-sm-4">
                                       <img src="images/client5.jpg" class="d-block w-100" alt="Client 3">
@@ -411,7 +411,7 @@
                  The Medical Coder/Auditor ensures appropriate coding and maintains compliance documentation.</p>
              </div>
              <div class="col-md-5">
-               <img src="./images/code3.PNG" class="img-thumbnail text-shadow-5 img-fluid mx-auto" width="500"
+               <img src="./images/code3.png" class="img-thumbnail text-shadow-5 img-fluid mx-auto" width="500"
                  height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
                  focusable="false">
                </svg>
