--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 <body>
 
   <!--navigation-->
-  <div class="container-liquid">
+  <div class="container-fluid">
     <div class="container w-100 p-20px">
       <nav class="navbar navbar-expand-sm navbar-Default bg-Default" aria-label="Third navbar example">
         <div class="container-fluid d-flex justify-content-space-between border-bottom">
