fix the font, images, alignment to be responsived

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="px-4 py-5 text-center">
       <div class="py-5">
         <h1 class="display-5 fw-light lh-1 mb-2" id="hero1">FRONTEND + BACKEND <br><span
-          style="font-size: 5rem; font-weight: bolder;" id="devep"> WEB DEVELOPER</span></h1>
+          style="font-size: 10vw; font-weight: bolder;" id="devep"> WEB DEVELOPER</span></h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead" style="color: rgb(202,212,244);">I am a freelance web developer who loves to brings
             ideas to
@@ -278,7 +278,7 @@
 
           <section id="clients" class="bg-light">
               <div class="container w-100 p-5">
-                  <h2 class="title text-center" style="font-size: 3rem; text-transform: uppercase; font-weight: bolder; color: rgb(10, 25, 47);">Previous Clients</h2>
+                  <h2 class="title text-center" style="font-size: 10vh; text-transform: uppercase; font-weight: bolder; color: rgb(10, 25, 47);">Previous Clients</h2>
                   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
