change my link in github

--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                 <li class="ms-3"><a href="https://www.facebook.com/jaiyanz22" ><i class="fa-brands fa-facebook fa-2x" style="color: rgb(95,241,208);"></i></a></li>
                 <li class="ms-3"><a href="https://www.linkedin.com/in/jaime-yanoc-4b715116b/" ><i class="fa-brands fa-linkedin fa-2x" style="color: rgb(95,241,208);"></i></a></li>
                 <li class="ms-3"><a href="https://discord.com/channels/@me" ><i class="fa-brands fa-discord fa-2x" style="color: rgb(95,241,208);"></i></a></li>
-                <li class="ms-3"><a href="https://github.com/FapaGaming" ><i class="fa-brands fa-github fa-2x" style="color: rgb(95,241,208);"></i></a></li>
+                <li class="ms-3"><a href="https://fapagaming.github.io/" ><i class="fa-brands fa-github fa-2x" style="color: rgb(95,241,208);"></i></a></li>
                 <li class="ms-3"><a href="https://www.twitch.tv/fapa_gaming"><i class="fa-brands fa-twitch fa-2x"
                   style="color: rgb(95,241,208);"></i></a></li>
               </ul>
