--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                   style="color: rgb(95,241,208);"></i></a></li>
             <li class="ms-3"><a href="https://www.youtube.com/channel/UCXyWGVK9w16Xc9elwipflBw"><i
                   class="fa-brands fa-youtube" style="color: rgb(95,241,208);"></i></a></li>
-            <li class="ms-3"><a href="https://github.com/FapaGaming"><i class="fa-brands fa-github"
+            <li class="ms-3"><a href="https://fapagaming.github.io/"><i class="fa-brands fa-github"
                   style="color: rgb(95,241,208);"></i></a></li>
             <li class="ms-3"><a href="https://www.twitch.tv/fapa_gaming"><i class="fa-brands fa-twitch"
                   style="color: rgb(95,241,208);"></i></a></li>
