--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           <div class="collapse navbar-collapse" id="navbarsExample03">
             <ul class="navbar-nav ms-auto mb-2 mb-sm-0" id="n1">
               <li class="nav-item" id="l1">
-                <a class="nav-link active" aria-current="page" href="#me1" id="aa">About Me</a>
+                <a class="nav-link active" aria-current="page" href="#about" id="aa">About Me</a>
               </li>
               <li class="nav-item" id="l1">
-                <a class="nav-link active" href="#custom-cards" id="aa">Portfolio</a>
+                <a class="nav-link active" href="#custom-cards" id="#Previous-Clients">Portfolio</a>
               </li>
               <li class="nav-item" id="l1">
                 <a class="nav-link active" href="contact.html" id="aa">Contact</a>
@@ -278,7 +278,7 @@
 
           <section id="clients" class="bg-light">
               <div class="container w-100 p-5">
-                  <h2 class="title text-center" style="font-size: 10vh; text-transform: uppercase; font-weight: bolder; color: rgb(10, 25, 47);">Previous Clients</h2>
+                  <h2 class="title text-center" style="font-size: 10vh; text-transform: uppercase; font-weight: bolder; color: rgb(10, 25, 47);" id="Previous-Clients">Previous Clients</h2>
                   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
