--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a class="nav-link active" aria-current="page" href="#about" id="aa">About Me</a>
               </li>
               <li class="nav-item" id="l1">
-                <a class="nav-link active" href="#custom-cards" id="#Previous-Clients">Portfolio</a>
+                <a class="nav-link active" href="#Previous-Clients" id="aa">Portfolio</a>
               </li>
               <li class="nav-item" id="l1">
                 <a class="nav-link active" href="contact.html" id="aa">Contact</a>
