--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!--hero-->
     <div class="px-4 py-5 text-center">
       <div class="py-5">
-        <h1 class="display-5 fw-light lh-1 mb-2" id="hero1">FRONTEND + BACKEND <br><span
+        <h1 class="display-5 fw-light lh-1 mb-2" id="hero1">FRONTEND + BACKEND = FULL STACK <br><span
           style="font-size: 10vw; font-weight: bolder;" id="devep"> WEB DEVELOPER</span></h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead" style="color: rgb(202,212,244);">I am a freelance web developer who loves to brings
