Update the link, job discription, and putting an animation

--- a/contact.html
+++ b/contact.html
@@ -104,8 +104,8 @@
       <div class="container col-xl-10 col-xxl-8 px-4 py-5">
         <div class="row align-items-center g-lg-5 py-2">
           <div class="col-lg-7 text-center text-lg-start">
-            <h1 class="display-4 fw-normal lh-1 mb-3"  style="color: rgb(95,241,208); font-size: 2rem; ">I AM HERE FOR YOU <br><span style="font-size: 4rem; font-weight: bolder;color: rgb(202,212,244);">CONTACT ME</span></h1>
-            <p class="col-lg-10 fs-3 fw-bold" style="color: rgb(95,241,208);">Code<span style="color: rgb(202,212,244);">Pro</span> Page design Tips</p>
+            <h1 class="display-4 fw-normal lh-1 mb-3"  style="color: #45f3ff; font-size: 2rem; ">I AM HERE FOR YOU <br><span style="font-size: 4rem; font-weight: bolder;color: rgb(202,212,244);">CONTACT ME</span></h1>
+            <p class="col-lg-10 fs-3 fw-bold" style="color: #45f3ff;">Code<span style="color: rgb(202,212,244);">Pro</span> Page design Tips</p>
             <ul class="col-lg-10 fs-5 fw-normal" style="color: rgb(202,212,244);">
               <li>Ensure it's easy to access</li>
               <li>Make it unique</li>
@@ -115,12 +115,12 @@
             </ul>
             <div>
               <ul class="nav col-md-7 list-unstyled">
-                <li class="ms-3"><a href="https://www.facebook.com/jaiyanz22" ><i class="fa-brands fa-facebook fa-2x" style="color: rgb(95,241,208);"></i></a></li>
-                <li class="ms-3"><a href="https://www.linkedin.com/in/jaime-yanoc-4b715116b/" ><i class="fa-brands fa-linkedin fa-2x" style="color: rgb(95,241,208);"></i></a></li>
-                <li class="ms-3"><a href="https://discord.com/channels/@me" ><i class="fa-brands fa-discord fa-2x" style="color: rgb(95,241,208);"></i></a></li>
-                <li class="ms-3"><a href="https://fapagaming.github.io/" ><i class="fa-brands fa-github fa-2x" style="color: rgb(95,241,208);"></i></a></li>
+                <li class="ms-3"><a href="https://www.facebook.com/jaiyanz22" ><i class="fa-brands fa-facebook fa-2x" style="color: #45f3ff;"></i></a></li>
+                <li class="ms-3"><a href="https://www.linkedin.com/in/jaime-yanoc-4b715116b/" ><i class="fa-brands fa-linkedin fa-2x" style="color: #45f3ff;"></i></a></li>
+                <li class="ms-3"><a href="https://discord.com/channels/@me" ><i class="fa-brands fa-discord fa-2x" style="color: #45f3ff;"></i></a></li>
+                <li class="ms-3"><a href="https://fapagaming.github.io/" ><i class="fa-brands fa-github fa-2x" style="color: #45f3ff;"></i></a></li>
                 <li class="ms-3"><a href="https://www.twitch.tv/fapa_gaming"><i class="fa-brands fa-twitch fa-2x"
-                  style="color: rgb(95,241,208);"></i></a></li>
+                  style="color: #45f3ff;"></i></a></li>
               </ul>
               <br>
              
@@ -158,7 +158,7 @@
                 <label for="comment" style="color: rgb(10,25,47);">Write a message</label>
               </div>
               <button class="w-100 btn btn-lg btn-transfarent"
-                style="border: solid 1px rgb(202,212,244); color: rgb(95,241,208);" type="submit">Message Send</button>
+                style="border: solid 1px rgb(202,212,244); color: #45f3ff;" type="submit">Message Send</button>
               <hr class="my-4">
               <small class="text-muted">if you're looking for a developer to add to your team, I'd love to hear from
                 you!</small>
@@ -185,17 +185,17 @@
 
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-3"><a href="https://www.facebook.com/jaiyanz22"><i class="fa-brands fa-facebook"
-                style="color: rgb(95,241,208);"></i></a></li>
+                style="color: #45f3ff;"></i></a></li>
           <li class="ms-3"><a href="https://www.linkedin.com/in/jaime-yanoc-4b715116b/"><i class="fa-brands fa-linkedin"
-                style="color: rgb(95,241,208);"></i></a></li>
+                style="color: #45f3ff;"></i></a></li>
           <li class="ms-3"><a href="https://discord.com/channels/@me"><i class="fa-brands fa-discord"
-                style="color: rgb(95,241,208);"></i></a></li>
+                style="color: #45f3ff;"></i></a></li>
           <li class="ms-3"><a href="https://www.youtube.com/channel/UCXyWGVK9w16Xc9elwipflBw"><i
-                class="fa-brands fa-youtube" style="color: rgb(95,241,208);"></i></a></li>
+                class="fa-brands fa-youtube" style="color: #45f3ff;"></i></a></li>
           <li class="ms-3"><a href="https://github.com/FapaGaming"><i class="fa-brands fa-github"
-                style="color: rgb(95,241,208);"></i></a></li>
+                style="color: #45f3ff;"></i></a></li>
           <li class="ms-3"><a href="https://www.twitch.tv/fapa_gaming"><i class="fa-brands fa-twitch"
-                style="color: rgb(95,241,208);"></i></a></li>
+                style="color: #45f3ff;"></i></a></li>
         </ul>
       </footer>
     </div>
