--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
           <div class="collapse navbar-collapse" id="navbarsExample03">
             <ul class="navbar-nav ms-auto mb-2 mb-sm-0" id="n1">
               <li class="nav-item" id="l1">
-                <a class="nav-link active" aria-current="page" href="#about" id="aa">About Me</a>
+                <a class="nav-link active" aria-current="page" href="#me-about" id="aa">About Me</a>
               </li>
               <li class="nav-item" id="l1">
-                <a class="nav-link active" href="#Previous-Clients" id="aa">Portfolio</a>
+                <a class="nav-link active" aria-current="page" href="#about" id="aa">Mission & Vision</a>
+              </li>
+              <li class="nav-item" id="l1">
+                <a class="nav-link active" href="#clients" id="aa">Portfolio</a>
               </li>
               <li class="nav-item" id="l1">
                 <a class="nav-link active" href="contact.html" id="aa">Contact</a>
@@ -90,7 +93,7 @@
 
        <!--about me-->
         
-    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+    <div class="container col-xl-10 col-xxl-8 px-4 py-5" id="me-about">
       <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-7 text-center text-lg-start">
           <h1 class="display-4 fw-bold lh-1 mb-3" style="color:  #45f3ff;">About Me</h1>
@@ -115,15 +118,15 @@
               </div>
               <div id="cont">
                   <div id="details">
-                      <h2>JAIME YANOC <br><span>Full Stack Web Developer</span></h2>
+                      <h2>JAIME YANOC <br><span>Full Stack Web Developer <br> Graphics Artist</span></h2>
                       <div class="data">
                           <h3> 11 <br><span>Projects</span></h3>
                           <h3> InKODEnito <br><span>KodeGo</span></h3>
                           <h3> WD46 <br><span>Batch</span></h3>
                       </div>
                       <div id="actionBtn">
-                        <button class="w-100 btn btn-sm btn-info">Hire Me</button>
-                        <button class="w-100 btn btn-sm btn-info">Message</button>
+                        <button class="w-100 btn btn-sm btn-info"><a href="contact.html" style="text-decoration: none; color: rgb(10, 25, 47);">Hire Me</a></button>
+                        <button class="w-100 btn btn-sm btn-info"><a href="contact.html" style="text-decoration: none; color: rgb(10, 25, 47);">Message</a></button>
                           
                       </div>
                   </div>
@@ -139,7 +142,7 @@
    <div class="b-example-divider" id="about"></div>
 
    <div class="container-fluid my-5" style="background-color: #45f3ff;">
-     <H1 style="text-align: center; font-size: 3rem; font-weight: bolder; padding-top: 20px; padding-bottom: 20px;">ABOUT ME</H1>
+     <H1 style="text-align: center; font-size: 3rem; font-weight: bolder; padding-top: 20px; padding-bottom: 20px;">Mission & Vision</H1>
      <div class=" row pb-3">
 
        <div class="col-lg-4 col-md-6 text-dark">
@@ -267,7 +270,8 @@
                    <li>Don't ask for too much information</li>
                  </ul>
                  </p>
-                 <button id="button77" type="button"><span id="span11"></span>Resume</button>
+                 <a href="https://drive.google.com/file/d/1tLeKYxIxe-5PG0C7D5t6CJdedz9PRqjf/view?usp=share_link"
+                 target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
                </div>
  
                <div class="col">
@@ -319,7 +323,7 @@
 
           <section id="clients" class="bg-light">
               <div class="container w-100 p-5">
-                  <h2 class="title text-center" style="font-size: 5vh; text-transform: uppercase; font-weight: bolder; color: rgb(10, 25, 47);" id="Previous-Clients">Previous Clients</h2>
+                  <h2 class="title text-center" style="font-size: 5vh; text-transform: uppercase; font-weight: bolder; color: rgb(10, 25, 47);">Previous Clients</h2>
                   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                       <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
