Change uppercase and update the links every section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-sm navbar-default text-bg-default" aria-label="Third navbar example">
         <div class="container-fluid d-flex justify-content-space-between border-bottom fixed-top">
-          <a class="navbar-brand" href="#hero1"><img src="./images/codepro.svg" alt="logo" style="width: 150px;"></a>
+          <a class="navbar-brand" href="#contrabida"><img src="./images/codepro.svg" alt="logo" style="width: 150px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
             aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa-solid fa-bars" style="color: #45f3ff;"><span></span></i>
@@ -54,7 +54,7 @@
 
 
     <!--hero-->
-    <div class="px-4 py-2 text-center">
+    <div class="px-4 py-2 text-center" id="contrabida">
       <div class="py-5">
         <h1 class="display-5 fw-light lh-1 mb-2" id="hero1" data-aos="fade-up">FRONTEND + BACKEND = FULL STACK<br><span
             style="font-size: 8vw; font-weight: bolder;" id="devep">WEB DEVELOPER</span></h1>
@@ -63,7 +63,7 @@
             web developer who loves to brings
             ideas to
             life with web technologies.
-            talented Product Designer with front end development skills.
+            Talented Product Designer with front end development skills.
           </p>
           <div data-aos="zoom-in" data-aos-delay="1000">
             <a href="contact.html"><button id="button77" type="button"><span id="span11"></span>Hire Me</button></a>
@@ -519,7 +519,7 @@
             data-aos-delay="500">
             <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
               <div class="col-md-4 d-flex align-items-center">
-                <a href="#navbarsExample03" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <a href="#contrabida" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                   <img src="./images/codepro.svg" alt="logo" style="width: 150px;">
                 </a>
               </div>
