--- a/index.html
+++ b/index.html
@@ -486,6 +486,45 @@
 
           <hr class="featurette-divider">
 
+          <div class="row featurette">
+            <div class="col-md-7 order-md-2" data-aos="fade-right" data-aos-delay="1000">
+              <h2 class="ff1" id="project">Featured CLOTHES STUDIO eCommerce Project. <br>
+                <span style="color: rgb(202,212,244);" class="gm1">CLOTHES STUDIO</span>
+              </h2>
+              <p class="lead" id="fp1">An eCommerce website is an online store where you can buy or sell products online. 
+                You will get Custom E-commerce Website for Clothing. Contact now </p>
+            </div>
+            <div class="col-md-5 order-md-1" data-aos="zoom-in">
+              <img src="./images/code6.png" class="img-thumbnail text-shadow-5 img-fluid mx-auto" width="500"
+                height="500" src="code.PNG" role="img" aria-label="Placeholder: 500x500"
+                preserveAspectRatio="xMidYMid slice" focusable="false">
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+              </svg>
+
+            </div>
+          </div>
+
+          <hr class="featurette-divider">
+
+          <div class="row featurette mt-5">
+            <div class="col-md-7" data-aos="fade-left" data-aos-delay="1000">
+              <h2 class="ff1" id="project">Featured eCommerce Website Project.
+                <br><span style="color: rgb(202,212,244);" class="gm1">Shopmania</span>
+              </h2>
+              <p class="lead" id="fp1"> Ecommerce is the term for buying and selling goods or services online, using devices like computers, tablets, or smartphones.</p>
+            </div>
+            <div class="col-md-5" data-aos="zoom-in">
+              <img src="./images/code5.png" class="img-thumbnail text-shadow-5 img-fluid mx-auto" width="500"
+                height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
+                focusable="false">
+              </svg>
+
+            </div>
+          </div>
+
+          <hr class="featurette-divider">
+
 
 
           <div class="row featurette">
